--- a/src/components/PrayerTimeTable.astro
+++ b/src/components/PrayerTimeTable.astro
@@ -90,11 +90,13 @@ for (const key in filteredObject) {
   }
 }
 
-
 ---
 
 <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
-<small>{hijri}, {date}, {day}</small>
+<div class="flex justify-evenly items-center">
+	<small>{hijri}, {date}, {day}</small>
+	<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 text-orange-300 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
+  </div>
 <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
 <div class="overflow-x-auto">
  <table class="table table-lg">
