--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -7,21 +7,21 @@ const currentCityCode = pathname.split('/')[2];
 ---
 
 <div id="daerahList">
-	<div class="divider">
-		Lokasi lain di {state}
+	<!-- <div class="divider"> -->
+		<!-- Lokasi lain di {state} -->
 		<!-- Lokasi utama lain -->
 		<!-- Pautan ke lokasi utama -->
 		<!-- Pilih lokasi -->
-	</div>
+	<!-- </div> -->
 	
-	<div class="flex mt-6">
+	<div class="overflow-y-auto w-max">
 <div class="stats shadow">
 	{cities.map((el: any) => 
 	<div class="stat">
 		<a href={'/' + state + '/' + el[0]}>
 
 	  <div class={el.indexOf(currentCityCode)==0 ?'stat-title selected': 'stat-title'}>{el[0]}</div>
-	  <div class={el.indexOf(currentCityCode)==0 ?'stat-desc selected': 'stat-desc'} style="width:200px;text-wrap:wrap">{el[1]}</div>
+	  <div class={el.indexOf(currentCityCode)==0 ?'stat-desc selected text-wrap': 'stat-desc text-wrap'} style="width:200px">{el[1]}</div>
 	</div>
 		</a>
 		)}
@@ -32,15 +32,15 @@ const currentCityCode = pathname.split('/')[2];
 
   <style>.selected{color: white}</style>
   <script>
-	import { isOpen } from '../store.js';
+	// import { isOpen } from '../store.js';
   
-	const daerahList = document.getElementById('daerahList') as HTMLInputElement;
+	// const daerahList = document.getElementById('daerahList') as HTMLInputElement;
 
-	isOpen.subscribe(open => {
-	  if (open) {
-		daerahList.classList.remove('hidden');
-	  } else {
-		daerahList.classList.add('hidden');
-	  }
-	})
+	// isOpen.subscribe(open => {
+	//   if (open) {
+	// 	daerahList.classList.remove('hidden');
+	//   } else {
+	// 	daerahList.classList.add('hidden');
+	//   }
+	// })
   </script>
