--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -8,11 +8,11 @@ const negeriLabel = pathname !== '/' ? decodeURI(pathname).split('/')[1].replace
 ---
 
   <div class="dropdown">
-	<div tabindex="0" role="button" class="btn m-1">{negeriLabel}<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+	<div tabindex="0" role="button" class="btn btn-ghost m-1">{negeriLabel}<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
 		<path stroke-linecap="round" stroke-linejoin="round" d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9" />
 	  </svg>	  
     </div>
-	<ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+	<ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-200 rounded-box w-52">
 		{Object.keys(Constants.locations).map((el: any) => 
 			<li><a href={'/' + el}>{el}</a></li>
 			)}
