--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,13 +67,18 @@ const { title, state, city } = Astro.props;
 	}
 	main,
 	header {
+		/* padding: 1rem; */
+		/* width: 1200px;
+		max-width: calc(100% - 2rem); */
+		/* color: white; */
+		/* font-size: 20px; */
+		line-height: 1.6;
+	}
+	main .nav {
 		margin: auto;
-		padding: 1rem;
+		/* padding: 1rem; */
 		width: 1200px;
 		max-width: calc(100% - 2rem);
-		/* color: white; */
-		font-size: 20px;
-		line-height: 1.6;
 	}
 	.flip {
 		display: inline-block;
