--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -1,6 +1,5 @@
 ---
 import SelectNegeri from "../components/SelectNegeri.astro";
-import SelectDaerah from "../components/SelectDaerah.astro";
 
 const { city, state } = Astro.props;
 const {pathname} = Astro.url;
@@ -16,23 +15,48 @@ else
 	isDaerahPage = false;
 
 ---
-<main>
-<div class="navbar p-0">
+<main class="bg-base-200">
+	<!-- <div class="nav">
+		<div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-200">
+			<div class="collapse-title text-xl font-medium">
+				Lokasi lain di {state}
+			</div>
+			  <div class="collapse-content"> da
+			</div>
+		  </div>
+	</div> -->
+<!-- <hr class="h-px my-0 border-0 dark:bg-gray-800"> -->
+<div class="navbar nav">
 	<div class="navbar-start">
-		<a class="btn btn-md btn-ghost text-lg" href="/" title="back to home">
+		<a class="btn btn-ghost text-md" href="/" title="back to home">AA</a>
+		<!-- <a class="btn btn-ghost text-xs uppercase" href="/" title="back to home">
+			AdhanApp
+			AA
+			/
+		</a> -->
+		<!-- <a class="btn btn-md btn-ghost text-lg" href="/" title="back to home">
 			<span class="flip">↗︎</span>
-		</a>
-		<SelectNegeri />
+		</a> -->
 	</div>
-	<!-- <div class="navbar-center">
-		<a class="btn btn-ghost text-lg" href="/" title="back to home">
+	<div class="navbar-center">
+		<SelectNegeri />
+
+		<!-- <a class="btn btn-ghost text-lg" href="/" title="back to home">
 			adhanApp
 			<span class="flip">↗︎</span>
 		</a>
-	</div> -->
+		<a class="btn btn-md btn-ghost text-sm" href="/" title="back to home">
+			adhan.app
+		</a> -->
+		<!-- <a class="btn btn-md btn-ghost text-sm" href="/" title="back to home">
+			AA
+		</a> -->
+	</div>
 	<div class="navbar-end">
-{!isDaerahPage?
-		<!-- start toggle -->
+		
+	<!-- {!isDaerahPage?
+<div class="divider divider-start text-base">
+
 		<div class="form-control">
 			<label class="cursor-pointer label">
 				<input
@@ -40,17 +64,53 @@ else
 					type="checkbox"
 					title="toggle daerah"
 					checked="checked"
-					class="checkbox checkbox-accent"
+					class="checkbox checkbox-xs checkbox-accent"
 				/>
-				<!-- <span class="label-text">toggle daerah</span> -->
+				<span class="label-text ml-4">toggle daerah</span>
 			</label>
+</div>
 		</div>
-		<!-- end toggle -->
-		:''}
+		:''} -->
+		<div class="dropdown dropdown-end">
+        <div tabindex="0" role="button" class="btn btn-md btn-ghost rounded-btn text-xs uppercase">...</div>
+		
+        <ul tabindex="0" class="menu dropdown-content z-[1] p-2 shadow bg-base-200 rounded-box w-44 mt-4">
+          <li><label class="cursor-pointer label">
+			<input
+				type="checkbox"
+				title="toggle theme"
+				checked="checked"
+				class="checkbox checkbox-accent checkbox-xs"
+			/>
+			<span class="label-text">toggle theme</span>
+		</label></li> 
+          <li><label class="cursor-pointer label">
+			<input
+				type="checkbox"
+				title="minimal mode"
+				checked="checked"
+				class="checkbox checkbox-accent checkbox-xs"
+			/>
+			<span class="label-text">minimal mode</span>
+		</label></li>
+		<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
+          <li><label class="cursor-pointer label">
+			<input
+				name="worksonffline"
+				type="checkbox"
+				title="works offline"
+				checked="checked"
+				class="checkbox checkbox-accent checkbox-xs"
+			/>
+			<span class="label-text">works offline</span>
+		</label>
+	</li>
+        </ul>
+      </div>
 	</div>
 </div>
 
-{!isDaerahPage ? <SelectDaerah state={state} cities={city} /> : ''}
+<!-- <hr class="h-px my-0 bg-gray-200 border-0 dark:bg-gray-700"> -->
 </main>
 
 <script>
@@ -64,6 +124,7 @@ import { isOpen } from "../store";
 	const currentPathname = new URL(document.location.href).pathname,
 		currentCityCode = currentPathname.split('/')[2],
 		checkbox = document.querySelector('[name="toggledaerah"]') as HTMLInputElement;
+		console.log(currentCityCode, checkbox);
 
 	if(currentCityCode){
 		checkbox.classList.remove('hidden');
