--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -36,7 +36,7 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 		</a> -->
 	</div>
 	<div class="navbar-center">
-		<SelectNegeri />
+		<!-- <SelectNegeri /> -->
 
 		<!-- <a class="btn btn-ghost text-lg" href="/" title="back to home">
 			adhanApp
@@ -107,7 +107,7 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 	</div>
 </div>
 
-<!-- <hr class="h-px my-0 bg-gray-200 border-0 dark:bg-gray-700"> -->
+<!-- <hr class="h-px border-0 dark:bg-gray-700"> -->
 </main>
 
 <script>
