--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -38,7 +38,7 @@ const { cities } = Astro.props;
 					</div>
 
 
-				  <div class='stat-desc w-full text-wrap'>{el[1]}</div>
+				  <div class='stat-desc text-wrap'>{el[1]}</div>
 				</div>
 					</a>
 					)}
