--- a/src/pages/[state]/[city].astro
+++ b/src/pages/[state]/[city].astro
@@ -2,6 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 import Constants from "../../constants";
 import PrayerTimeTable from "../../components/PrayerTimeTable.astro";
+import SelectNegeri from "../../components/SelectNegeri.astro";
 import SelectDaerah from "../../components/SelectDaerah.astro";
 
 export async function getStaticPaths() {
@@ -22,24 +23,22 @@ for (const state in Constants.locations) {
 
 const { state } = Astro.params;
 const { cities,location } = Astro.props;
-
-const citiesArray: any[] = cities;
 ---
 
 <Layout title={state + ' - ' + location} state={state} city={cities}>
-	{citiesArray.length>1 ? <section class="bg-base-200">
+	<section class="subnav bg-base-200">
 		<div class="nav my-0">
-			<hr class="h-px border-0 dark:bg-gray-700" />
+			<SelectNegeri />
+			<!--<hr class="h-px border-0 dark:bg-gray-700" /> -->
 			<div tabindex="0" class="collapse collapse-arrow">
 				<div class="collapse-title text-sm flex items-center">
-					Lokasi lain di {state}
-				</div>
+			</div>
 				<div class="p-0 collapse-content overflow-y-auto">
 					<SelectDaerah state={state} cities={cities} />
 				</div>
 			  </div>
 			  </div>
-	</section>: ''}
+	</section>
 
 
 		<div class="hero min-h-screen">
