--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -25,7 +25,7 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 <!-- <hr class="h-px my-0 border-0 dark:bg-gray-800"> -->
 <div class="navbar nav">
 	<div class="navbar-start">
-		<a class="btn btn-ghost text-md" href="/" title="back to home">AA</a>
+		<a class="btn btn-ghost text-lg" href="/" title="back to home">adhan.app</a>
 		<!-- <a class="btn btn-ghost text-xs uppercase" href="/" title="back to home">
 			AdhanApp
 			AA
@@ -71,7 +71,7 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 		<div class="dropdown dropdown-end">
         <div tabindex="0" role="button" class="btn btn-md btn-ghost rounded-btn text-xs uppercase">...</div>
 		
-        <ul tabindex="0" class="menu dropdown-content z-[1] p-2 shadow bg-base-200 rounded-box w-44 mt-4">
+        <ul tabindex="0" class="menu dropdown-content p-2 shadow bg-base-200 rounded-box w-44 mt-4 z-20">
           <li><label class="cursor-pointer label">
 			<input
 				type="checkbox"
@@ -107,7 +107,7 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 	</div>
 </div>
 
-<!-- <hr class="h-px border-0 dark:bg-gray-700"> -->
+<hr class="h-px border-0 dark:bg-gray-700">
 </main>
 
 <script>
