--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,32 +6,19 @@ import SelectDaerah from "../components/SelectDaerah.astro";
 import Constants from "../constants";
 
 const state = Constants.defaultSettings.waktuSolatState || 'get state from localstorage',
-	city = Constants.defaultSettings.waktuSolatCity || 'get waktusolat from localstorage';
+	city = Constants.defaultSettings.waktuSolatCity || 'get waktusolat city from localstorage',
+	cities = Constants.defaultSettings.waktuSolatCityArray || 'get waktusolat cities from localstorage';
 ---
 
-<Layout title="AdhanApp" state={state} city={city}>
-	<!-- <section class="bg-base-200">
-		<div class="nav my-0">
-			<hr class="h-px border-0 dark:bg-gray-700" />
-			<div tabindex="0" class="collapse collapse-arrow">
-				<div class="collapse-title text-sm flex items-center">
-					Lokasi lain di {state}
-				</div>
-				<div class="p-0 collapse-content overflow-y-auto">
-					<SelectDaerah state={state} cities={city} />
-				</div>
-			  </div>
-			  </div>
-	</section> -->
+<Layout title="AdhanApp" state={state} city={cities}>
 	<section class="subnav bg-base-200">
 		<div class="nav my-0">
 			<SelectNegeri />
-			<!--<hr class="h-px border-0 dark:bg-gray-700" /> -->
 			<div tabindex="0" class="collapse collapse-arrow">
 				<div class="collapse-title text-sm flex items-center">
 			</div>
 				<div class="p-0 collapse-content overflow-y-auto">
-					<SelectDaerah state={state} cities={city} />
+					<SelectDaerah state={state} cities={cities} />
 				</div>
 			  </div>
 			  </div>
@@ -39,7 +26,7 @@ const state = Constants.defaultSettings.waktuSolatState || 'get state from local
 		<div class="hero min-h-screen rounded-lg">
 			<div class="hero-content text-center">
 			  <div class="max-w-md">
-				<h1 class="text-3xl font-bold">Wilayah Persekutuan</h1>
+				<h1 class="text-3xl font-bold">{city}</h1>
 					<PrayerTimeTable />
 			  </div>
 			</div>
