repair state font size on frontpage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const state = Constants.defaultSettings.waktuSolatState || 'get state from local
 		<div class="hero min-h-screen rounded-lg">
 			<div class="hero-content text-center">
 			  <div class="max-w-md">
-				<h1 class="text-3xl font-bold">{city}</h1>
+				<h1 class="text-2xl font-bold p-6">{city}</h1>
 					<PrayerTimeTable />
 			  </div>
 			</div>
