--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -21,6 +21,7 @@ for (const state in Constants.locations) {
 
 const { state } = Astro.params;
 const { cities } = Astro.props;
+// console.log('st', state);
 
 ---
 
