--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Navigation from "../layouts/Navigation.astro";
-import Footer from "../layouts/Footer.astro";
+// import Footer from "../layouts/Footer.astro";
 
 interface Props {
 	title: string;
@@ -9,7 +9,6 @@ interface Props {
 }
 
 const { title, state, city } = Astro.props;
-
 ---
 
 <!doctype html>
@@ -27,7 +26,7 @@ const { title, state, city } = Astro.props;
 		<main>
 			<slot />
 		</main>
-		<Footer />
+		<!-- <Footer /> -->
 	</body>
 </html>
 <style is:global>
@@ -80,7 +79,7 @@ const { title, state, city } = Astro.props;
 		width: 1200px;
 		max-width: calc(100% - 2rem);
 	}
-	main .subnav{
+	main .subnav {
 		top: 0;
 		z-index: 1;
 		position: sticky;
