--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import SelectNegeri from "../components/SelectNegeri.astro";
+// import SelectNegeri from "../components/SelectNegeri.astro";
 
 // const { city, state } = Astro.props;
 // const {pathname} = Astro.url;
@@ -10,8 +10,8 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 // 	isDaerahPage = true;
 // else
 // 	isDaerahPage = false;
-
 ---
+
 <main class="bg-base-200">
 	<!-- <div class="nav">
 		<div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-200">
@@ -22,36 +22,37 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 			</div>
 		  </div>
 	</div> -->
-<!-- <hr class="h-px my-0 border-0 dark:bg-gray-800"> -->
-<div class="navbar nav">
-	<div class="navbar-start">
-		<a class="btn btn-ghost text-lg" href="/" title="back to home">adhan.app</a>
-		<!-- <a class="btn btn-ghost text-xs uppercase" href="/" title="back to home">
+	<!-- <hr class="h-px my-0 border-0 dark:bg-gray-800"> -->
+	<div class="navbar nav">
+		<div class="navbar-start">
+			<a class="btn btn-ghost text-lg" href="/" title="back to home"
+				>adhan.app</a
+			>
+			<!-- <a class="btn btn-ghost text-xs uppercase" href="/" title="back to home">
 			AdhanApp
 			AA
 			/
 		</a> -->
-		<!-- <a class="btn btn-md btn-ghost text-lg" href="/" title="back to home">
+			<!-- <a class="btn btn-md btn-ghost text-lg" href="/" title="back to home">
 			<span class="flip">↗︎</span>
 		</a> -->
-	</div>
-	<div class="navbar-center">
-		<!-- <SelectNegeri /> -->
+		</div>
+		<div class="navbar-center">
+			<!-- <SelectNegeri /> -->
 
-		<!-- <a class="btn btn-ghost text-lg" href="/" title="back to home">
+			<!-- <a class="btn btn-ghost text-lg" href="/" title="back to home">
 			adhanApp
 			<span class="flip">↗︎</span>
 		</a>
 		<a class="btn btn-md btn-ghost text-sm" href="/" title="back to home">
 			adhan.app
 		</a> -->
-		<!-- <a class="btn btn-md btn-ghost text-sm" href="/" title="back to home">
+			<!-- <a class="btn btn-md btn-ghost text-sm" href="/" title="back to home">
 			AA
 		</a> -->
-	</div>
-	<div class="navbar-end">
-		
-	<!-- {!isDaerahPage?
+		</div>
+		<div class="navbar-end">
+			<!-- {!isDaerahPage?
 <div class="divider divider-start text-base">
 
 		<div class="form-control">
@@ -68,65 +69,81 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 </div>
 		</div>
 		:''} -->
-		<div class="dropdown dropdown-end">
-        <div tabindex="0" role="button" class="btn btn-md btn-ghost rounded-btn text-xs uppercase">...</div>
-		
-        <ul tabindex="0" class="menu dropdown-content p-2 shadow bg-base-200 rounded-box w-44 mt-4 z-20">
-          <li><label class="cursor-pointer label">
-			<input
-				type="checkbox"
-				title="toggle theme"
-				checked="checked"
-				class="checkbox checkbox-accent checkbox-xs"
-			/>
-			<span class="label-text">toggle theme</span>
-		</label></li> 
-          <li><label class="cursor-pointer label">
-			<input
-				type="checkbox"
-				title="minimal mode"
-				checked="checked"
-				class="checkbox checkbox-accent checkbox-xs"
-			/>
-			<span class="label-text">minimal mode</span>
-		</label></li>
-		<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
-          <li><label class="cursor-pointer label">
-			<input
-				name="worksonffline"
-				type="checkbox"
-				title="works offline"
-				checked="checked"
-				class="checkbox checkbox-accent checkbox-xs"
-			/>
-			<span class="label-text">works offline</span>
-		</label>
-	</li>
-        </ul>
-      </div>
-	</div>
-</div>
+			<div class="dropdown dropdown-end">
+				<div
+					tabindex="0"
+					role="button"
+					class="btn btn-md btn-ghost rounded-btn text-xs uppercase"
+				>
+					...
+				</div>
 
-<hr class="h-px border-0 dark:bg-gray-700">
+				<ul
+					tabindex="0"
+					class="menu dropdown-content p-2 shadow bg-base-200 rounded-box w-44 mt-4 z-20"
+				>
+					<li>
+						<label class="cursor-pointer label">
+							<input
+								type="checkbox"
+								title="toggle theme"
+								checked="checked"
+								class="checkbox checkbox-accent checkbox-xs"
+							/>
+							<span class="label-text">toggle theme</span>
+						</label>
+					</li>
+					<li>
+						<label class="cursor-pointer label">
+							<input
+								type="checkbox"
+								title="minimal mode"
+								checked="checked"
+								class="checkbox checkbox-accent checkbox-xs"
+							/>
+							<span class="label-text">minimal mode</span>
+						</label>
+					</li>
+					<hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
+					<li>
+						<label class="cursor-pointer label">
+							<input
+								name="worksonffline"
+								type="checkbox"
+								title="works offline"
+								checked="checked"
+								class="checkbox checkbox-accent checkbox-xs"
+							/>
+							<span class="label-text">works offline</span>
+						</label>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<hr class="h-px border-0 dark:bg-gray-700" />
 </main>
 
 <script>
 	import type { WritableAtom } from "nanostores";
-import { isOpen } from "../store";
+	import { isOpen } from "../store";
 
 	function setStateVal(stateName: WritableAtom<boolean>, val: boolean) {
 		stateName.set(val);
 	}
 
 	const currentPathname = new URL(document.location.href).pathname,
-		currentCityCode = currentPathname.split('/')[2],
-		checkbox = document.querySelector('[name="toggledaerah"]') as HTMLInputElement;
-		console.log(currentCityCode, checkbox);
+		currentCityCode = currentPathname.split("/")[2],
+		checkbox = document.querySelector(
+			'[name="toggledaerah"]',
+		) as HTMLInputElement;
+	// console.log(currentCityCode, checkbox);
 
-	if(currentCityCode){
-		checkbox.classList.remove('hidden');
+	if (currentCityCode) {
+		checkbox.classList.remove("hidden");
 	} else {
-		checkbox.classList.add('hidden');
+		checkbox.classList.add("hidden");
 	}
 
 	checkbox.addEventListener("change", function () {
@@ -137,3 +154,4 @@ import { isOpen } from "../store";
 		}
 	});
 </script>
+
