--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,14 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 import SelectDaerah from "../components/SelectDaerah.astro";
 import Constants from "../constants";
 
-const state = Constants.defaultSettings.waktuSolatState || 'get state from localstorage',
-	city = Constants.defaultSettings.waktuSolatCity || 'get waktusolat city from localstorage',
-	cities = Constants.defaultSettings.waktuSolatCityArray || 'get waktusolat cities from localstorage';
+const state =
+		Constants.defaultSettings.waktuSolatState || "get state from localstorage",
+	city =
+		Constants.defaultSettings.waktuSolatCity ||
+		"get waktusolat city from localstorage",
+	cities =
+		Constants.defaultSettings.waktuSolatCityArray ||
+		"get waktusolat cities from localstorage";
 ---
 
 <Layout title="AdhanApp" state={state} city={cities}>
@@ -15,20 +20,19 @@ const state = Constants.defaultSettings.waktuSolatState || 'get state from local
 		<div class="nav my-0">
 			<SelectNegeri />
 			<div tabindex="0" class="collapse collapse-arrow">
-				<div class="collapse-title text-sm flex items-center">
-			</div>
+				<div class="collapse-title text-sm flex items-center"></div>
 				<div class="p-0 collapse-content overflow-y-auto">
 					<SelectDaerah state={state} cities={cities} />
 				</div>
-			  </div>
-			  </div>
-	</section>
-		<div class="hero min-h-screen rounded-lg">
-			<div class="hero-content text-center">
-			  <div class="max-w-md">
-				<h1 class="text-2xl font-bold p-6">{city}</h1>
-					<PrayerTimeTable />
-			  </div>
 			</div>
-		  </div>
+		</div>
+	</section>
+	<div class="hero min-h-screen rounded-lg">
+		<div class="hero-content text-center">
+			<div class="max-w-md">
+				<h1 class="text-2xl font-bold p-6">{city}</h1>
+				<PrayerTimeTable />
+			</div>
+		</div>
+	</div>
 </Layout>
