standardize color on selectDaerah

--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -22,8 +22,8 @@ const currentCityCode = pathname.split("/")[2];
 							<div
 								class={
 									el.indexOf(currentCityCode) == 0
-										? "stat-title selected"
-										: "stat-title"
+										? "stat-title text-gray-400 selected"
+										: "stat-title text-gray-400"
 								}
 							>
 								{el[0]}
