--- a/src/pages/[state]/[city].astro
+++ b/src/pages/[state]/[city].astro
@@ -6,42 +6,44 @@ import SelectNegeri from "../../components/SelectNegeri.astro";
 import SelectDaerah from "../../components/SelectDaerah.astro";
 
 export async function getStaticPaths() {
-  let returnedAry:any = [];
+	let returnedAry: any = [];
 
-for (const state in Constants.locations) {
-  const location = Constants.locations,
-   cities = location[state as keyof typeof location];
-  for (const city in cities) {
-    returnedAry.push({
-      params: { state, city },
-      props: { cities: Object.entries(cities), location: cities[city as keyof typeof cities] }
-    });
-  }
-}
-  return returnedAry;
+	for (const state in Constants.locations) {
+		const location = Constants.locations,
+			cities = location[state as keyof typeof location];
+		for (const city in cities) {
+			returnedAry.push({
+				params: { state, city },
+				props: {
+					cities: Object.entries(cities),
+					location: cities[city as keyof typeof cities],
+				},
+			});
+		}
+	}
+	return returnedAry;
 }
 
 const { state } = Astro.params;
-const { cities,location } = Astro.props;
+const { cities, location } = Astro.props;
 ---
 
-<Layout title={state + ' - ' + location} state={state} city={cities}>
+<Layout title={state + " - " + location} state={state} city={cities}>
 	<section class="subnav bg-base-200">
 		<div class="nav my-0">
 			<SelectNegeri />
 			<!--<hr class="h-px border-0 dark:bg-gray-700" /> -->
 			<div tabindex="0" class="collapse collapse-arrow">
-				<div class="collapse-title text-sm flex items-center">
-			</div>
+				<div class="collapse-title text-sm flex items-center"></div>
 				<div class="p-0 collapse-content overflow-y-auto">
 					<SelectDaerah state={state} cities={cities} />
 				</div>
-			  </div>
-			  </div>
+			</div>
+		</div>
 	</section>
 
-		<div class="hero min-h-screen">
-			<!-- <div class="divider divider-start text-base">
+	<div class="hero min-h-screen">
+		<!-- <div class="divider divider-start text-base">
 				<div class="form-control">
 					<label class="cursor-pointer label">
 						<input
@@ -55,10 +57,9 @@ const { cities,location } = Astro.props;
 					</label>
 		</div>
 				</div> -->
-			<div class="hero-content text-center">
-			
-			  <div class="max-w-md">
-<!-- <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
+		<div class="hero-content text-center">
+			<div class="max-w-md">
+				<!-- <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
 				<div class="form-control">
 					<label class="cursor-pointer label">
 					  <span class="label-text">set as default</span>
@@ -66,9 +67,9 @@ const { cities,location } = Astro.props;
 					</label>
 				  </div> -->
 
-				  <h1 class="text-2xl font-bold p-6">{location}</h1>
-					<PrayerTimeTable />
-			  </div>
+				<h1 class="text-1xl font-bold p-4">{location}</h1>
+				<PrayerTimeTable />
 			</div>
-		  </div>
+		</div>
+	</div>
 </Layout>
